# pfree

./: ChangeLog  INSTALL  LICENSE  Makefile.am  README  configure.ac  free.1.in  free.c
include/: machine.h  pfree.h
machine/: freebsd.c  linux.c
src/: free.c  meminfo_print.c  meminfo_usage.c  meminfo_ushift.c
